k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: week1
  labels:
    environment: production
    version: v1
