k8s/prod/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: week1
  labels:
    app: web
    environment: production
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
