k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: week1-ingress
  namespace: week1
  labels:
    environment: production
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "14400"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "14400"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 20.184.61.48.nip.io
    secretName: week1-tls-secret
  rules:
  - host: 20.184.61.48.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 8080
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 3000
